--- a/data/backup_sync/do_alert.sh.j2
+++ b/data/backup_sync/do_alert.sh.j2
@@ -3,5 +3,6 @@ cd {{ base_path }}/{{ backup.scripts_path }}
 . ~/.profile
 
 export TXT_HOSTNAME=`hostname`
-export TXT_MESSAGE="[$TXT_HOSTNAME] $1"
-curl --data chat_id="$TELEGRAM_CHATID" --data "text=$TXT_MESSAGE" "https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage"
+export TXT_MESSAGE="[$TXT_HOSTNAME] $*"
+
+curl -H "Content-Type: application/json" -d "{ \"username\": \"PiBackup Bot\", \"content\": \"$TXT_MESSAGE\" }" $webhook_url
