--- a/data/profile.j2
+++ b/data/profile.j2
@@ -26,8 +26,7 @@ if [ -d "$HOME/.local/bin" ] ; then
     PATH="$HOME/.local/bin:$PATH"
 fi
 
-export TELEGRAM_CHATID={{ telegram_chatid }}
-export TELEGRAM_TOKEN={{ telegram_token }}
+export webhook_url={{ webhook_url }}
 
 export BACKUP_REPOSITORY={{ base_path }}/{{ backup.source }}
 
